# Glitter-Island

./: .gitattributes  .gitignore  CMakeLists.txt  LICENCE-third-party.txt  LICENCE.txt  README.md
GraphicsProject/: .gitignore  AttributeCategory.cpp  AttributeCategory.hpp  CMakeLists.txt  CharacterDrawer.hpp  DemoCore.cpp  DemoCore.hpp  FileLoad.cpp  FileLoad.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicalObject.cpp  GraphicalObject.hpp  Mesh.cpp  Mesh.hpp  OldGraphicalObject.cpp  OldGraphicalObject.h  SimpleColoredDrawer.cpp  Skybox.cpp  Skybox.hpp  Terrain.cpp  Terrain.hpp  TextDrawer.cpp  TextDrawer.hpp  Water.cpp  Water.hpp  all_gl_headers.hpp  main.cpp
cmake/modules/: FindSFML.cmake
extlibs/SFML/lib/: freetype.lib  sfml-graphics-d.lib  sfml-graphics.lib  sfml-system-d.lib  sfml-system.lib  sfml-window-d.lib  sfml-window.lib
extlibs/oglplus/include/oglplus/config/: fix_gl_extension.hpp  fix_gl_version.hpp  site.hpp
extlibs/oglplus/include/oglplus/config/backup/: site.hpp
img/: heightMap - Copy.xcf  heightMap.tga  heightMap.xcf  testTexture.xcf
models/: CerberusCycles.mtl  Palmtree.mtl  human.mtl  test.mtl
shaders/: CharacterDraw_f.glsl  CharacterDraw_v.glsl  DepthOnly_f.glsl  DepthOnly_v.glsl  FinalFramebufferCopy_f.glsl  FinalFramebufferCopy_v.glsl  Fog_f.glsl  HBAO_f.glsl  Purple_f.glsl  SSAO_BlurHor_f.glsl  SSAO_BlurLin_f.glsl  SSAO_BlurVer_f.glsl  SSAO_Calc_f.glsl  SSAO_Draw_f.glsl  SSAO_Grow_f.glsl  SSAO_f.glsl  SimpleColored_v.glsl  SimpleDiffuse_f.glsl  SimpleDiffuse_v.glsl  Skybox_fadeout_f.glsl  Skybox_skydraw_f.glsl  StandardMaterialSolid_f.glsl  StandardMaterialTransparent_f.glsl  StandardMaterialTransparent_v.glsl  StandardMaterial_f.glsl  StandardMaterial_v.glsl  Terrain_f.glsl  Terrain_v.glsl  Water_f.glsl  Water_v.glsl  finalFramebufferCopy_f.glsl  finalFramebufferCopy_v.glsl  g-buffer-write_f.glsl  g-buffer-write_v.glsl  geometryOnly_f.glsl  geometryOnly_v.glsl  graphicalObject_f.glsl  graphicalObject_v.glsl  passthrough2_v.glsl  passthrough3_v.glsl  (+8 more)
src/: BaseDemoContext.cpp  BaseDemoContext.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CharacterDrawer.cpp  ContextManager.cpp  ContextManager.hpp  DebugDrawer.cpp  DebugDrawer.hpp  DefaultFramebuffer.cpp  DemoCore.cpp  DemoCore.hpp  DepthOnlyMaterial.cpp  DepthOnlyMaterial.hpp  DirectionalLight.cpp  DirectionalLight.hpp  EditorContext.cpp  EditorContext.hpp  FileLoad.cpp  Fog.cpp  Fog.hpp  Framebuffer.cpp  Framebuffer.hpp  GUIContext.cpp  GUIContext.hpp  GraphicalObject.cpp  GraphicalObject.hpp  GraphicsEngine.cpp  GraphicsEngine.hpp  IFramebuffer.cpp  IFramebuffer.hpp  Material.cpp  Material.hpp  MaterialManager.cpp  MaterialManager.hpp  Mesh.cpp  Mesh.hpp  MeshManager.cpp  MeshManager.hpp  (+22 more)
src/Glitter-Engine/: CMakeLists.txt
src/Glitter-Engine/implementation/: CMakeLists.txt  Camera.cpp  Framebuffer.cpp  GraphicsEngine.cpp  IFramebuffer.cpp  Material.cpp  MaterialManager.cpp  MaterialManager.hpp  Mesh.cpp  MeshManager.cpp  MeshManager.hpp  PerspectiveCamera.cpp  SimpleColoredDrawer.cpp  Skybox.cpp  StandardGraphicalObject.cpp  StandardGraphicalObject.hpp  StandardMaterial.cpp  StandardMaterial.hpp  Terrain.cpp  Utility.cpp  Water.cpp
src/Glitter-Engine/include/GE/: Camera.hpp  DefaultFramebuffer.hpp  DirectionalLight.hpp  Framebuffer.hpp  GraphicalObject.hpp  GraphicsEngine.hpp  Material.hpp  MaterialManager.hpp  Mesh.hpp  OrthoCamera.hpp  PerspectiveCamera.hpp  RawCamera.hpp  SimpleColoredDrawer.hpp  SimpleColoredMaterial.hpp  Skybox.hpp  StandardMaterial.hpp  Terrain.hpp  Utility.hpp  Water.hpp  all_gl_headers.hpp
src/Glitter-Engine/src/: AttributeCategory.cpp  CMakeLists.txt  Camera.cpp  DebugDrawer.cpp  DefaultFramebuffer.cpp  DirectionalLight.cpp  Framebuffer.cpp  GraphicalObject.cpp  GraphicsEngine.cpp  Material.cpp  MaterialManager.cpp  Mesh.cpp  MeshManager.cpp  OrthoCamera.cpp  PerspectiveCamera.cpp  RawCamera.cpp  SimpleColoredDrawer.cpp  SimpleColoredMaterial.cpp  Skybox.cpp  StandardMaterial.cpp  Terrain.cpp  Water.cpp
src/Glitter-Island/: BaseDemoContext.cpp  BaseDemoContext.hpp  CMakeLists.txt  ContextManager.hpp  DemoCore.cpp  DemoCore.hpp  EditorContext.cpp  EditorContext.hpp  GUIContext.hpp  ModelSelectionContext.cpp  ModelSelectionContext.hpp  TextDrawer.cpp  TextDrawer.hpp  all_gl_headers.hpp  main.cpp
