cmake_minimum_required (VERSION 2.6)

add_executable( ${EXECUTABLE_NAME} 
AttributeCategory.cpp
Camera.cpp
CharacterDrawer.cpp
DefaultFramebuffer.cpp
DemoCore.cpp
DirectionalLight.cpp
FileLoad.cpp
Fog.cpp
Framebuffer.cpp
GraphicalObject.cpp
IFramebuffer.cpp
main.cpp
Mesh.cpp
SimpleColoredDrawer.cpp
Skybox.cpp
Terrain.cpp
TextDrawer.cpp
Water.cpp)

